<resources>
    <string name="facebook_app_id" translatable="false">424801901719498</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb424801901719498</string>

    <string name="app_name">Perros Felices</string>
    <string name="login_button">Log in</string>
    <string name="welcome_title">Welcome to the happy dogs community!</string>
    <string name="association_member_hint">Are your an association member?</string>
    <string name="login_title">Log In</string>
    <string name="email_address_hint">E-mail Address</string>
    <string name="password_hint">Password</string>
    <string name="access_button_text">Sign In</string>


    <string name="greetings">Hi %1$s!</string>
    <string name="volunteers">Volunteers</string>
    <string name="shelter">Shelter</string>
    <string name="missing">Missing Dogs</string>
    <string name="lost">Lost my dog</string>
</resources>
