<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_tapiz_background"
    android:orientation="vertical"
    tools:context=".scenes.boards.HomeFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/greetings"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularImageView" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_dog"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorPrimaryDark"
        app:civ_shadow_radius="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />


    <androidx.cardview.widget.CardView
        android:theme="@style/CardViewTextBackground"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardViewVolunteers"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewMissing"
        app:layout_constraintEnd_toStartOf="@+id/cardViewShelter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/volunteers"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="313dp" />

        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteers"/>

</LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:theme="@style/CardViewTextBackground"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardViewShelter"
        android:layout_width="@dimen/margin_120dp"
        android:layout_height="@dimen/margin_120dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewLost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardViewVolunteers"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/shelter"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="313dp" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/shelter"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:theme="@style/CardViewTextBackground"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardViewMissing"
        android:layout_width="@dimen/margin_120dp"
        android:layout_height="@dimen/margin_120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardViewLost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewVolunteers">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/missing"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="313dp" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/missing"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:theme="@style/CardViewTextBackground"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardViewLost"
        android:layout_width="@dimen/margin_120dp"
        android:layout_height="@dimen/margin_120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardViewMissing"
        app:layout_constraintTop_toBottomOf="@+id/cardViewShelter">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/lost"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="313dp" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/lost"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

